# rouchdb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE
.github/workflows/: ci.yml  docs.yml
crates/rouchdb/: Cargo.toml
crates/rouchdb-adapter-http/: Cargo.toml
crates/rouchdb-adapter-http/src/: lib.rs
crates/rouchdb-adapter-memory/: Cargo.toml
crates/rouchdb-adapter-memory/src/: lib.rs
crates/rouchdb-adapter-redb/: Cargo.toml
crates/rouchdb-adapter-redb/src/: lib.rs
crates/rouchdb-changes/: Cargo.toml
crates/rouchdb-changes/src/: lib.rs
crates/rouchdb-cli/src/: main.rs
crates/rouchdb-core/: Cargo.toml
crates/rouchdb-core/src/: adapter.rs  collation.rs  document.rs  error.rs  lib.rs  merge.rs  rev_tree.rs
crates/rouchdb-query/: Cargo.toml
crates/rouchdb-query/src/: lib.rs  mango.rs  mapreduce.rs
crates/rouchdb-replication/: Cargo.toml
crates/rouchdb-replication/src/: checkpoint.rs  lib.rs  protocol.rs
crates/rouchdb-server/src/routes/: session.rs
crates/rouchdb/src/: lib.rs
crates/rouchdb/tests/: all_docs.rs  attachments.rs  changes_feed.rs  conflicts.rs  couchdb_integration.rs  data_diversity.rs  database_ops.rs  error_conditions.rs  http_crud.rs  mango_queries.rs  map_reduce.rs  post_and_attachments.rs  replication.rs
crates/rouchdb/tests/common/: mod.rs
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md
docs/book/src/architecture/: collation.md  overview.md  replication-protocol.md  revision-trees.md  storage-layer.md
docs/book/src/contributing/: crate-guide.md  setup.md  testing.md
docs/book/src/es/: inicio-rapido.md  introduccion.md
docs/book/src/es/guias/: consultas.md  crud.md  replicacion.md
docs/book/src/getting-started/: concepts.md  installation.md  quickstart.md
docs/book/src/guides/: adapters.md  attachments.md  changes-feed.md  conflict-resolution.md  crud.md  querying.md  replication.md
docs/book/src/reference/: adapter-trait.md  core-types.md  database-api.md  error-handling.md
