[package]
name = "rouchdb-adapter-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
rouchdb-core = { path = "../rouchdb-core" }
async-trait = "0.1"
base64 = "0.22"
md-5 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
