[package]
name = "rouchdb-adapter-redb"
version = "0.1.0"
edition = "2024"

[dependencies]
rouchdb-core = { path = "../rouchdb-core" }
async-trait = "0.1"
base64 = "0.22"
md-5 = "0.10"
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
