[package]
name = "rouchdb-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
